# Nawala

./: .gitignore  LICENSE  README.md  biome.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/formulir/: research.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: V001__initial.sql
src-tauri/src/: app.rs  error.rs  main.rs  paths.rs
src-tauri/src/auth/: argon.rs  lockout.rs  mod.rs
src-tauri/src/commands/: audit.rs  auth.rs  backup.rs  formulir.rs  import.rs  mod.rs  nomor_surat.rs  penduduk.rs  pengaturan.rs
src-tauri/src/db/: mod.rs  pragma.rs
src-tauri/src/repo/: audit.rs  auth.rs  backup.rs  formulir.rs  mod.rs  nomor_surat.rs  penduduk.rs  pengaturan.rs  riwayat.rs
src-tauri/src/resources/reference/: kode.json
src-tauri/src/resources/schemas/: F-1.01.json  F-1.02.json  F-1.03.json  F-1.06.json  F-1.08.json  F-1.15.json  F-1.16.json  F-1.25.json  F-1.27.json  F-2.01-kelahiran.json  F-2.01-kematian.json  F-2.01.json  F-2.12.json  F-2.29.json  F-2.30.json
src-tauri/src/resources/templates/: F-1.01.html  F-1.02.html  F-1.03.html  F-1.06.html  F-1.08.html  F-1.15.html  F-1.16.html  F-1.25.html  F-1.27.html  F-2.01-kelahiran.html  F-2.01-kematian.html  F-2.01.html  F-2.12.html  F-2.29.html  F-2.30.html
src-tauri/src/service/: backup.rs  import_warga.rs  mod.rs  nomor_surat.rs  pdf.rs  resolusi_ortu.rs
src/app/: layout.tsx  page.tsx
src/hooks/: useAuth.ts
src/lib/: formCatalogue.test.ts  handlebars.test.ts  handlebars.ts  navigation.test.ts  navigation.ts  nomorSurat.test.ts  (+3 more)
(+36 files in other folders)
